<resources>
    <string name="app_name">MovieBase</string>
    <string name="text_app">MovieBase</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="arrowtoright">arrowToRight</string>
    <string name="arrowtoleft">arrowToLeft</string>
    <string name="popcorn_3d">popcorn_3d</string>
    <string name="firstx">firstX</string>
    <string name="secondx">secondX</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="reg_form_text">Please fill out the form with the necessary information below.</string>
    <string name="email_enter">Enter your e-mail here!</string>
    <string name="enter_password">Enter your password here!</string>
    <string name="agree_msg">By clicking OK, I agree to share my e-mail address and password with the MovieBase organization.</string>
    <string name="new_movie">New Movie</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exception_error">Activity must implement the NewMovieDialogListener interface!</string>
    <string name="dateFormat">yyyy/MM/dd HH:mm:ss</string>
    <string name="enterEmail">Please enter your email address</string>
    <string name="enterPass">Please enter your password</string>
    <string name="category">Category:</string>
    <string name="description">Description:</string>
    <string name="length">Length:</string>
    <string name="rate_this_film_here">Rate this film here:</string>
    <string name="save_rating">Save rating</string>
    <string name="status_logged_in">STATUS: Logged in</string>
    <string name="dollar_sign">dollar_sign</string>
    <string name="max_money">99999 $</string>
    <string name="my_collection">My Collection</string>
    <string name="registration_form">REGISTRATION FORM</string>
    <string name="movie_name">Movie name</string>
    <string name="category_2">Category</string>
    <string name="length_in_minutes">Length (in minutes)</string>
    <string name="description_2">Description</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="buy">BUY</string>
    <string name="created_by">Created by Tamás Hargitai, BME</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="delete_all">Delete all</string>
    <string name="about">About</string>
    <string name="new_rating">New rating:</string>
    <string name="no_registered_user">There is no registered user.</string>
    <string name="wrong_email_password">Wrong email / password!</string>
    <string name="user_deleted">User deleted</string>
    <string name="user_not_found">User not found</string>
    <string name="exit">Exit</string>
    <string name="log_off">Are you sure you want to log off?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_email">Please enter your email address</string>
    <string name="register_password">Please enter your password</string>
    <string name="cb_checked">You can not continue with the checkbox unchecked.</string>
    <string name="user_exists">User already exists!</string>
    <string name="reg_success">Registration was successful!</string>
    <string name="all_deleted">All users deleted</string>
    <string name="go_back">GO BACK</string>
    <string name="users">USERS</string>
    <string name="enter_user_name_to_delete">Enter user name to delete:</string>
    <string name="username">username</string>
    <string name="delete">Delete</string>
    <string-array name="category_items">
        <item>Action</item>
        <item>Documentary</item>
        <item>Horror</item>
        <item>Comedy</item>
        <item>Romance</item>
    </string-array>
</resources>
