<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MovieListActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Design.NoActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_logged_in"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:layout_gravity="start|center"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dollar_sign"
                android:layout_marginStart="40dp"
                android:contentDescription="@string/dollar_sign" />

            <TextView
                android:id="@+id/tvMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_money"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btnCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_collection"
            android:background="@drawable/rounded_button_inverse"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btnUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_inverse"
            android:textColor="@color/black"
            android:text="@string/users"
            android:layout_marginStart="16dp"
            android:layout_centerInParent="true" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:srcCompat="@drawable/ic_add_black_36dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>